2011-10-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFArray.c:
	* Source/CFArray.m:
	* Source/CFRuntime.c: Completely replace CFArray with a pure C
	implementation.
	* Headers/CoreFoundation/CFArray.h: Export functions for C++ compatibility.

2011-10-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFArray.c: Start work on C-only implementation of CFArray.

2011-10-01 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFNumber.c: Removed branch that never existed in the first place.

2011-10-01 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFRuntime.c:
	* Source/CFNumber.m:
	* Source/CFNumber.c: Started writing a C-only implementation of CFNumber.
	* Tests/CFNumber: Added some basic tests for CFNumber.

2011-09-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBase.c: Initialize allocators.

2011-09-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBase.c: Continued work on CFAllocators.

2011-09-28 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBundle.m: Do not try to use dlfcn.h on Windows.
	* Source/CFUUID.c: Define INITRANDOM() on Windows.
	* Source/GNUmakefile: Add -L/mingw/bin to LDFLAGS on mingw.

2011-09-28 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFUUID.c: Add random number generation on Windows.

2011-09-28 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/objc_interface.h: Move CFRuntimeBridgeClass() to NSCFType.h.
	* Source/CFBase.c: 
	* Source/CFData.c:
	* Source/CFString.c: Delay bridging until ObjC classes are initialized.
	* Source/NSCFData.m: Bridge to CFData.
	* Source/NSCFError.m: Bridge to CFError.
	* Source/NSCFString.m: Bridge to CFString.
	* Source/NSCFType.m:
	* Source/NSCFType.h: Move NSCFType interface and some extras to NSCFType.h.

2011-09-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFData.c: Bridge CFData to NSCFData.

2011-09-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/threading.h:
	* Source/CFBase.c: